--- a/src/PageEditMenu.css
+++ b/src/PageEditMenu.css
@@ -1,10 +1,12 @@
 .page-edit-menu {
+    position: absolute;
     width: 240px;
+    height: calc(100vh - 82px);
     background-color: #f4f4f4;
     padding: 10px;
     right: 0;
     top: 0;
-    height: 100vh;
+    border-left: 1px solid #ddd;
 }
 
 .page-edit-head {
